# adl-pdf-ingest-phd

./: .env.example  .gitignore  LICENSE  README.md  dev_corpus_list.txt  pyproject.toml
metadata/: papers_manifest.csv  papers_manifest_normalized.csv  papers_manifest_sample.csv
notes/: demo_queries.md
pdf_ingest/: __init__.py  cleaning.py  cli.py  config.py  db.py  discover.py  es_client.py  extractor.py  metadata.py  models.py  pipeline.py  queries.py  worker.py
pdf_ingest/robots/: __init__.py  paperpile_sync.py  pdf_extractor.py
tests/: conftest.py  test_cleaning.py  test_db_roundtrip.py  test_enhancements.py  test_es_migrations.py  test_extractor_basic.py  test_integration.py  test_jobs_worker.py  test_metadata.py  test_paperpile_parsers.py  test_queries.py  test_state_machine.py
tools/: convert_manifest.py  select_dev_corpus.py
